k8s-tripfinder/backend-deployment.yaml
# Tripfinder Backend Deployment
# Version: v1.0.1

apiVersion: apps/v1
kind: Deployment
metadata:
  name: tripfinder-backend
  labels:
    app: tripfinder-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tripfinder-backend
  template:
    metadata:
      labels:
        app: tripfinder-backend
    spec:
      dnsPolicy: None
      dnsConfig:
        nameservers:
          - 8.8.8.8
          - 1.1.1.1
      containers:
        - name: tripfinder-backend
          image: 374965728115.dkr.ecr.us-east-1.amazonaws.com/tripfinder-backend:latest
          ports:
            - containerPort: 8080
      imagePullSecrets:
        - name: ecr-secret
