k8s-tripfinder/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tripfinder-frontend
  labels:
    app: tripfinder-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tripfinder-frontend
  template:
    metadata:
      labels:
        app: tripfinder-frontend
    spec:
      containers:
        - name: tripfinder-frontend
          image: 374965728115.dkr.ecr.us-east-1.amazonaws.com/tripfinder-frontend:latest
          ports:
            - containerPort: 80
      imagePullSecrets:
        - name: ecr-secret
