k8s-tripfinder/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tripfinder-frontend-service
  labels:
    app: tripfinder-frontend
spec:
  type: NodePort
  selector:
    app: tripfinder-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30081
